[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"]}
url = { version = "2" }
poem = { version = "1.3.59", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
store = { path = "../store"}
jsonwebtoken = "9"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.7.0", features = ["postgres"] }
serde_json = "1.0.148"
